--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,3 +71,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ToonTanks.Turret",NewName="/Script/ToonTanks.Tower")
