Added health component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ToonTanks.Turret",NewName="/Script/ToonTanks.Tower")
++FunctionRedirects=(OldName="/Script/ToonTanks.Projectile.OnComponentHit",NewName="/Script/ToonTanks.Projectile.OnHit")
