--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ r.DefaultFeature.AutoExposure=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Main.Main
 GameDefaultMap=/Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/BluePrints/GameMode/BP_ToonTanksGameMode.BP_ToonTanksGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -75,3 +76,4 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ToonTanks.Turret",NewName="/Script/ToonTanks.Tower")
 +FunctionRedirects=(OldName="/Script/ToonTanks.Projectile.OnComponentHit",NewName="/Script/ToonTanks.Projectile.OnHit")
+
